# PhysMAP_Manuscript

./: .gitignore  ConfMatPlotting.R  PairOfVAEs_cuda.ipynb  README.md  constants.R  label_data.csv  pyproject.toml
CellExplorerv2/: AllenOnly.r  classifyCellExp.r  processCellExp.m  processCellExp.r
CellExplorerv2/Data/: .Rapp.history  CellExplorer_ACG.mat  features_cellExp_new_Nov2023.mat  validNeurons.mat
InvivoA1/: processSantiago.r
InvivoA1/A1data/: ISI_dist.Rda  isiViolations.Rda  jaramillo_celltypes.Rda  santiagoISI.mat  santiagoQC.mat  spikeAmplitudes_Fixed.csv  spikeWaveformsNormalized.Rda  spikeWidth.Rda
juxtacellular/: .Rhistory  Generate_Traces.R  classifyData.r  classifyRaw.R  finalPlots.R  generate_example_data.py  helperFunctions.r  physmap_app.py  physmap_utils.py  processJianing.ipynb  processJianing.r
juxtacellular/JianingData/: MergedData.mat  ratio_p2t.Rda  width.Rda
juxtacellular/example_data/: isi.csv  metadata.csv  psth.csv  waveforms.csv
lookupTable/: ConfMatAll.csv  ConfMat_C4.csv  ConfMat_IBL.csv  IBL_predictions.Rda  IBL_truth.Rda  lookupTable.r  mapReference.r  mapReferenceAllen.r  mapReferenceAllen_Kenji.r  mapdata.csv  refdata.csv
lookupTable/data/: features_cellExp_final_Dec2023.mat  finalWaveforms.mat  isi_cellExp.Rda  theta_modulation_index.mat
