[tool.poetry]
name = "physmap"
version = "0.1.0"
description = ""
authors = ["Eric Kenji Lee <erickenjilee@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scanpy = "^1.11.5"
muon = "^0.1.7"
numpy = "2.3"
pandas = "^2.3.3"
scipy = "^1.17.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
anndata = "^0.12.7"
scikit-learn = "^1.8.0"
jupyterlab = "^4.5.2"
ipykernel = "^7.1.0"
igraph = "^1.0.0"
leidenalg = "^0.11.0"
pyreadr = "^0.5.4"
streamlit = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
